--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -5,6 +5,8 @@ on:
     # Run weekly on Mondays at 09:00 UTC
     - cron: '0 9 * * 1'
   workflow_dispatch: # Allow manual trigger
+  push:
+    branches: [ main ]
 
 jobs:
   update-dependencies:
@@ -78,5 +80,6 @@ jobs:
           dependencies
           automated
           maintenance
+
 
 
